# zad5_3-MateuszSzlachetko

./: .gitmodules  CMakeLists.txt  README.md
docs/: Doxyfile.in
include/: Cuboid.h  Drone.h  Figure.h  Matrix.h  Matrix3x3.h  Plateau.h  Pyramid.h  Rotor.h  RoundMountain.h  Scene.h  SceneObject.h  Vector.h  Vector3D.h
lib/GNUPlot/: CMakeLists.txt  lacze_do_gnuplota.hh
source/: Cuboid.cpp  Drone.cpp  Figure.cpp  Matrix3x3.cpp  Plateau.cpp  Pyramid.cpp  Rotor.cpp  RoundMountain.cpp  Scene.cpp  SceneObject.cpp  main.cpp
test/: CMakeLists.txt  Cuboid-test.cpp  Figure-test.cpp  Matrix-test.cpp  Rotor-test.cpp  Vector-test.cpp
